# rusty-book-manager

./: Cargo.toml  Makefile.toml  compose.yaml
.cargo/: config.toml
.github/workflows/: deploy_app.yaml
adapter/: Cargo.toml
adapter/migrations/: 20241022113314_start.up.sql
adapter/src/database/: mod.rs
adapter/src/database/model/: book.rs
adapter/src/redis/: mod.rs
adapter/src/repository/: book.rs  health.rs  user.rs
api/: Cargo.toml
api/src/: lib.rs
api/src/handler/: auth.rs  book.rs
api/src/model/: book.rs
api/src/route/: book.rs  health.rs
data/: initial_setup.sql
infra/: main.tf
kernel/: Cargo.toml
kernel/src/model/: id.rs
registry/: Cargo.toml
registry/src/: lib.rs
shared/: Cargo.toml
shared/src/: config.rs  error.rs
src/: main.rs
