[package]
name = "adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel.workspace = true
shared.workspace = true
async-trait.workspace = true
derive-new.workspace = true
anyhow.workspace = true
sqlx.workspace = true
uuid.workspace = true