[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel.workspace = true
shared.workspace = true
registry.workspace = true
axum.workspace = true
derive-new.workspace = true
serde.workspace = true
anyhow.workspace = true
uuid.workspace = true
thiserror.workspace = true