[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
shared.workspace = true
async-trait.workspace = true
anyhow.workspace = true
uuid.workspace = true
derive-new.workspace = true
