[package]
name = "shared"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axum.workspace = true
sqlx.workspace = true
thiserror.workspace = true
secrecy.workspace = true
uuid.workspace = true
strum.workspace = true
redis.workspace = true
bcrypt.workspace = true
garde.workspace = true
tracing.workspace = true